--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -17,11 +17,12 @@
 
 .bg-color
   &-1
-    background-color: #FFEED0
+    background-color: #D8ECEA
   &-2
-    background-color: #D2E3EC
+    background-color: #FCEBE9
   &-3
-    background-color: #EAD9E0
+    background-color: #E8E7F2
+
   &-4
     background-color: #FEE7DC
   &-5
@@ -54,7 +55,7 @@
 .bg-fondo
   &-1
     background-image: url("../assets/bg/bg1.png") !important
-    background-position-y: 70px
+    background-position-y: -100px
   &-2
     background-image: url("../assets/bg/bg2.png") !important
     background-position: bottom
