--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -55,11 +55,11 @@ $color-institucional-terciario: #E5782D
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #FE8953
-$color-secundario: #6DA4C3
+$color-primario: #E44B36
+$color-secundario: #292584
 $color-terciario: #3BC0F2
-$color-acento-contenido: #9B4467
-$color-acento-botones: #6DA4C3
+$color-acento-contenido: #42A599
+$color-acento-botones: #E44B36
 $color-adicional-1: #FDFCF5
 $color-adicional-2: #E5F0F6
 
@@ -70,7 +70,7 @@ $bg-menu: #F3F3F3
 $border-color-items-hover: $color-institucional
 
 // Color fondo home
-$color-fondo-home: #ECEDF6
+$color-fondo-home: #FCEBE9
 
 // Colores Slyder
 $bg-fondo-slider: #7A4978 !important
