se finaliza maquetación, pendiente recibir actividad y material complementario del tema 4

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -22,11 +22,10 @@
     background-color: #FCEBE9
   &-3
     background-color: #E8E7F2
-
   &-4
-    background-color: #FEE7DC
+    background-color: #FEF0D7
   &-5
-    background-color: #E1ECF2
+    background-color: #D8ECEA
   &-info
     background-color: #E8EEFD
   &-sintesis
@@ -75,7 +74,7 @@ $custom-card-shadow: 0 4px 8px rgba(0,0,0,0.1)
 $custom-card-text-bg: #FFF
 $custom-card-text-padding: 15px
 $custom-card-text-font-size: 14px
-$custom-card-img-height: 225px
+$custom-card-img-height: 322px
 .custom-image-card
   border-radius: $custom-card-border-radius
   overflow: hidden
@@ -106,15 +105,15 @@ $custom-card-img-height: 225px
 
 
 .acordion__header
-  background-color: lighten($color-acento-contenido, 25%) !important
+  background-color: #D3D2E6 !important
 
 .acordion__header--active
-  background-color: $color-acento-contenido !important
+  background-color: #292584 !important
   h4, i
-    color: #000 !important
+    color: #fff !important
 
 .acordion__contenido
-  background-color: lighten($color-acento-contenido, 27%) !important
+  background-color: #E8E7F2 !important
 
 
 .anexo__texto
