--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -73,7 +73,7 @@ $border-color-items-hover: $color-institucional
 $color-fondo-home: #FCEBE9
 
 // Colores Slyder
-$bg-fondo-slider: #7A4978 !important
+$bg-fondo-slider: #292584 !important
 $bg-bullets-slider-activo: #EBFEFD !important
 
 // Color Tipografias -----------------------------------
